2006-10-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.10a.

	* configure.ac, NEWS: Bump version to 1.10.
	* doc/automake.texi (Releases): Update for 1.10.

	* lib/config.sub, lib/texinfo.tex: New upstream versions.

	* lib/am/depend2.am: Typo.
	* lib/depcomp (scriptversion): Bump, to account for recent changes.

	* doc/automake.texi (Examples): Introduce the example, and point
	to Hello World.
	(Hello): Remove this obsolete node.

2006-10-15  Hans Ulrich Niedermann  <hun@n-dimensional.de>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/507:
	* lib/am/distdir.am (distdir): filename-length-max check is not
	done in sub-packages.
	* doc/automake.texi (Options): Document this.
	* tests/fn99subdir.test: New test.
	* tests/Makefile.am: Update.
	* THANKS: Update.

2006-10-14  Alfred M. Szmidt  <ams@gnu.org>  (tiny change)

	* doc/automake.texi (Third-Party Makefiles): Fix typo.
	* THANKS: Update.

2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (write_aclocal): Improve warning for mismatched
	Autoconf version.

	* automake.in: For preprocessed assembler, add `$(DEFS)
	$(DEFAULT_INCLUDES) $(INCLUDES)' to the compile rule.
	* doc/automake.texi (Assembly Support): Update.
	* NEWS: Update.
	Suggested by Thomas Schwinge and Ralf Corsepius.

	For PR automake/492.
	* automake.in (output_flag): Set to `-o' for Assembler and
	preprocessed Assembler, assuming that all understand `-c -o'.
	* THANKS, NEWS: Update.
	* tests/subobj10.test: New test.
	* tests/Makefile.am: Update.
	Report by Thomas Schwinge.

	* automake.in (%_macro_for_cond): New variable.
	(cond_stack_if): Use it for better error message about
	missing dependency tracking conditionals.
	* tests/asm2.test: New test, modeled after asm.test.
	* tests/Makefile.am: Adjust.
	Report by Ralf Corsepius.

	* doc/automake.texi (Options): `no-dependencies' is similar
	to `--ignore-deps', not `--include-deps'.