@@ -240,8 +240,8 @@ my %standard_prefix =
     map { $_ => 1 } (qw(bin data dataroot dvi exec html include info
                         lib libexec lisp localstate man man1 man2 man3
 			man4 man5 man6 man7 man8 man9 oldinclude pdf
-			pkgdatadir pkgincludedir pkglibdir ps sbin
-			sharedstate sysconf));
+			pkgdatadir pkgincludedir pkglibdir pkglibexecdir
+			ps sbin sharedstate sysconf));
 
 # Copyright on generated Makefile.ins.
 my $gen_copyright = "\
