@@ -1864,13 +1864,15 @@ the @dfn{primary}.  For instance, the primary @code{PROGRAMS} holds a
 list of programs that are to be compiled and linked.
 @vindex PROGRAMS
 
-@cindex @code{pkglibdir}, defined
-@cindex @code{pkgincludedir}, defined
 @cindex @code{pkgdatadir}, defined
+@cindex @code{pkgincludedir}, defined
+@cindex @code{pkglibdir}, defined
+@cindex @code{pkglibexecdir}, defined
 
-@vindex pkglibdir
-@vindex pkgincludedir
 @vindex pkgdatadir
+@vindex pkgincludedir
+@vindex pkglibdir
+@vindex pkglibexecdir
 
 @cindex @code{PACKAGE}, directory
 A different set of names is used to decide where the built objects
@@ -1878,9 +1880,9 @@ should be installed.  These names are prefixes to the primary, and they
 indicate which standard directory should be used as the installation
 directory.  The standard directory names are given in the GNU standards
 (@pxref{Directory Variables, , , standards, The GNU Coding Standards}).
-Automake extends this list with @code{pkglibdir}, @code{pkgincludedir},
-and @code{pkgdatadir}; these are the same as the non-@samp{pkg}
-versions, but with @samp{$(PACKAGE)} appended.  For instance,
+Automake extends this list with @code{pkgdatadir}, @code{pkgincludedir},
+@code{pkglibdir}, and @code{pkglibexecdir}; these are the same as the
+non-@samp{pkg} versions, but with @samp{$(PACKAGE)} appended.  For instance,
 @code{pkglibdir} is defined as @samp{$(libdir)/$(PACKAGE)}.
 
 @cindex @code{EXTRA_}, prepending
@@ -4393,9 +4395,9 @@ programs.  Most of the comments about these also apply to libraries
 In a directory containing source that gets built into a program (as
 opposed to a library or a script), the @code{PROGRAMS} primary is used.
 Programs can be installed in @code{bindir}, @code{sbindir},
-@code{libexecdir}, @code{pkglibdir}, or not at all (@code{noinst_}).
-They can also be built only for @samp{make check}, in which case the
-prefix is @samp{check_}.
+@code{libexecdir}, @code{pkglibdir}, @code{pkglibexecdir}, or not at all
+(@code{noinst_}).  They can also be built only for @samp{make check}, in
+which case the prefix is @samp{check_}.
 
 For instance:
 
