@@ -1,4 +1,8 @@
 New in 1.10a:
+ 
+* Miscellaneous changes:
+
+  - New shorthand `$(pkglibexecdir)' for `$(libexecdir)/@PACKAGE@'.
 
 New in 1.10:
 
