@@ -1,3 +1,14 @@
+2006-10-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/am/header-vars.am (pkglibexecdir): New variable.
+	* automake.in (%standard_prefix): Add it.
+	* doc/automake.texi (Uniform): Document it.
+	(Program Sources): Adjust.
+	* NEWS: Update.
+	* tests/libexec.test: New test.
+	* tests/Makefile.am: Update.
+	Suggested by Eric Blake.
+
 2006-10-15  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* configure.ac, NEWS: Bump version to 1.10a.
